--- a/Blog-App/templates/base.html
+++ b/Blog-App/templates/base.html
@@ -1,19 +1,32 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400"
-rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <meta charset="UTF-8">
     <title>Django Blog</title>
-</head>
-<body>
-    <header>
-        <h1><a href="{% url 'home' %}">Django Blog</a></h1>
-    </header>
 
-    <main>
-        {% block content %}
-        {% endblock %}
-    </main>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+    
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+</head>
+
+<body>
+    <div>
+        <header>
+            <div class="nav-left">
+                <h1>
+                    <a href="{% url 'home' %}">Django Blog</a>
+                </h1>
+            </div>
+            <div class="nav-right">
+                <a href="{% url 'post_new' %}">+ New Blog Post</a>
+            </div>
+        </header>
+
+        <main>
+            {% block content %}
+            {% endblock content %}
+        </main>
+    </div>
 </body>
 </html>
